# sw-structure-io

./: .gitignore  Cargo.toml  README.md  build.rs
data/: definitions.toml
examples/: all_blocks.rs  custom_block.rs  image_convert.rs  kaboom.rs  snake.rs  writing_building.rs
src/: additionaldatatypes.rs  block.rs  blockadditionalsettings.rs  building.rs  lib.rs  packedcolor.rs  root.rs  structs.rs  utils.rs
src/definitions/: structs.rs
src/io/: mod.rs  read.rs  types.rs  utils.rs  write.rs
src/io/version/: v0.rs
tests/: definitions.rs  roundtrip.rs
