[package]
name = "swsel"
version = "0.1.0"
edition = "2024"
description = "Sandbox World Structure Editing Library"

[dependencies]
byteorder = "1.5.0"
indexmap = "2.12.0"
once_cell = "1.21.3"
serde = {version = "1.0.228", features = ["serde_derive"]}
serde_cbor = "0.11.2"
toml = "0.9.8"

[build-dependencies]
serde = {version = "1.0.228", features = ["serde_derive"]}
serde_cbor = "0.11.2"
toml = "0.9.8"
