[package]
name = "sw-structure-io"
version = "0.1.0"
authors = ["nukcat"]
edition = "2024"
description = "SW Structure I/O Library: Read and Write Building Data for Sandbox World"

[dependencies]
env_logger = "0.11.8"
indexmap = "2.12.1"
log = "0.4.28"
num-traits = "0.2.19"
thiserror = "2.0.17"

[dev-dependencies]
image = "0.25.9"
rand = "0.9.2"
zip = "6.0.0"
